CICO-30250 updated text in checkout now page and button align fixed

--- a/guestweb/common_css/zoku/theme.less
+++ b/guestweb/common_css/zoku/theme.less
@@ -206,3 +206,6 @@ a,a:hover{
 .res-details-heading:hover {
     font-size: 16px!important;
 }
+.checkout-btn{
+	    font-size: 28px !important;
+}
